Fixed test module db table layout on mobile.

--- a/src/main/webapp/css/test-module/tm-global.css
+++ b/src/main/webapp/css/test-module/tm-global.css
@@ -6,48 +6,18 @@
 .dragonball-user-form-buttons {
   margin-left: 15px;
 }
- 
-.table-dragonball-users tr td:nth-child(7) form {
-  display: inline;
-}
 
-@media (max-width: 900px) {
-  .table-dragonball-users tr td:nth-child(1), .table-dragonball-users tr th:nth-child(1)
-    {
-    display: inline-block;
-    width: 9%;
-    font-size: 0.75em;
-  }
-  
-  .table-dragonball-users tr td:nth-child(2), .table-dragonball-users tr td:nth-child(3),
-    .table-dragonball-users tr th:nth-child(2), .table-dragonball-users tr th:nth-child(3)
-    {
-    display: inline-block;
-    width: 20%;
-    font-size: 0.75em;
-  }
-  
-  .table-dragonball-users tr td:nth-child(4), .table-dragonball-users tr td:nth-child(5),
-    .table-dragonball-users tr td:nth-child(6), .table-dragonball-users tr th:nth-child(4),
-    .table-dragonball-users tr th:nth-child(5), .table-dragonball-users tr th:nth-child(6)
-    {
-    display: inline-block;
-    width: 15%;
-    font-size: 0.75em;
-  }
-  
-  .table-dragonball-users tr th:nth-child(7) {
-    display: none;
-    width: 0%;
-  }
-  
-  .table-dragonball-users tr td:nth-child(7) {
-    display: block;
-    width: 100%;
-    font-size: 0.75em;
-  }
-  
-  .table-dragonball-users tr td:nth-child(7) input {
-    width: 45%;
-  }	
+.table-dragonball-users { 
+  overflow-x: auto;
+  white-space: nowrap;
+  margin: 0 auto;
 }
+@media (max-width: 900px) {
+	.table-dragonball-users {
+	  display: block;
+	}
+}
+  .table-dragonball-users tr td:nth-child(7) form {
+    display: inline; /** Display edit and delete buttons next to each other */
+  }
+
